# HidApiCpp

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  vcpkg.json
app/: CMakeLists.txt  main.cpp
include/Version/: Version.hpp  Version.hpp.in
include/hid/: API.hpp  Exception.hpp  HID.hpp  Info.hpp  Result.hpp  device.hpp  enumerate.hpp  hid.cpp  hidException.hpp
scripts/CMake/: FindFFF.cmake  PullSubmoduleMacro.cmake
scripts/bash/: Watch.sh
src/: API.cpp  CMakeLists.txt  Exception.cpp  HID.cpp  Info.cpp  device.cpp  enumerator.cpp  hidException.cpp  initException.cpp
tests/: APITests.hpp  CMakeLists.txt  DeviceCreationTests.hpp  DeviceWriteTests.hpp  HIDDeviceTests.hpp  HIDEnumerateTests.hpp  HIDOpenDeviceTests.hpp  RunTests.cpp  fff_hidapi.cpp  fff_hidapi.hpp
tests/Misc/: HIDDeviceTests.hpp  HIDEnumerateTests.hpp
